--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ dependencies {
 	implementation group: 'de.svenkubiak', name: 'jBCrypt', version: '0.4.3'
 	implementation 'com.auth0:java-jwt:4.5.0'
 	implementation 'com.auth0:jwks-rsa:0.22.1'
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.5'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
