--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,36 @@
-spring:
-  profiles:
-    active: @activeProfiles@
+## profiles
+#spring:
+#  profiles:
+#    active: @activeProfiles@
 #    active: dev
 #    active: prod
+
+## system environment
+server:
+  port: ${SERVER_PORT}
+
+spring:
+  application:
+    name: my-spring-boot-demo1
+
+  ## DB connection
+  datasource:
+    url: ${DB_URL}
+    username: ${DB_USER}
+    password: ${DB_PASSWORD}
+    driver-class-name: com.mysql.cj.jdbc.Driver
+  jpa:
+    show-sql: true
+
+## MyBatis
+mybatis:
+  type-aliases-package: com.example.my_spring_boot_demo1.dao.mybatis
+
+## Swagger UI
+springdoc:
+  api-docs:
+    path: /api-docs
+  swagger-ui:
+    path: /swagger-ui.html
+    display-request-duration: true
+  packagesToScan: com.example.my_spring_boot_demo1.controller
