--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -11,6 +11,12 @@ spring:
   jpa:
     show-sql: true
 
+  ## i18n
+  messages:
+    basename: i18n/messages
+    encoding: UTF-8
+    cache-duration: 3600
+
 ## MyBatis
 mybatis:
   type-aliases-package: com.example.my_spring_boot_demo1.dao.mybatis
