--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.4'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation group: 'de.svenkubiak', name: 'jBCrypt', version: '0.4.3'
 	implementation 'com.auth0:java-jwt:4.5.0'
 	implementation 'com.auth0:jwks-rsa:0.22.1'
