--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,38 +1,4 @@
-spring:
-  application:
-    name: my-spring-boot-demo1
-
-## DB connection
-  datasource:
-    url: jdbc:mysql://localhost:3306/db1
-    url: jdbc:mysql://localhost:3306/db1?useUnicode=true&characterEncoding=UTF-8
-    username: root
-    password:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-  jpa:
-    show-sql: true
-
-  ## i18n
-  messages:
-    basename: i18n/messages
-    encoding: UTF-8
-    cache-duration: 3600
-
-## MyBatis
-mybatis:
-  type-aliases-package: com.example.my_spring_boot_demo1.dao.mybatis
-
-## Swagger UI
-springdoc:
-  api-docs:
-    path: /api-docs
-  swagger-ui:
-    path: /swagger-ui.html
-    display-request-duration: true
-  packagesToScan: com.example.my_spring_boot_demo1.controller
-
-## logging
-logging:
-  level:
-    root: info
-    com.example.my_spring_boot_demo1: debug
+SERVER_PORT: 8080
+DB_URL: jdbc:mysql://localhost:3306/db1?useUnicode=true&characterEncoding=UTF-8
+DB_USER: root
+DB_PASSWORD:
