--- a/build.gradle
+++ b/build.gradle
@@ -37,10 +37,13 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.4'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	implementation 'org.springframework.boot:spring-boot-starter-aop'
 	implementation group: 'de.svenkubiak', name: 'jBCrypt', version: '0.4.3'
 	implementation 'com.auth0:java-jwt:4.5.0'
 	implementation 'com.auth0:jwks-rsa:0.22.1'
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.5'
+	implementation 'ch.qos.logback:logback-core:1.5.18'
+	implementation 'ch.qos.logback:logback-classic:1.5.18'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
